--- a/Tp1JuliePro/Tp1JuliePro/Views/Shared/_Layout.cshtml
+++ b/Tp1JuliePro/Tp1JuliePro/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 <li><a class="dropdown-item">Tracking Training sessions</a></li>
                 <li><a class="dropdown-item">Tracking objectives</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item">Profile</a></li>
+                <li><a class="dropdown-item" asp-controller="Trainer" asp-action="Index">Profile</a></li>
               </ul>
             </li>
 
