--- a/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/Trainers/Index.cshtml
+++ b/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/Trainers/Index.cshtml
@@ -50,6 +50,7 @@ ViewData["Title"] = "@Model.GeneralViewInfos.PageTitle";
                 </thead>
                 <tbody class="text-primary">
                     @foreach (var item in Model.Trainers) {
+                        var image = $"~/images/Trainers/{item.Photo}";
                     <tr>
                         <td>
                             @Html.DisplayFor(modelItem => item.Active)
@@ -63,8 +64,8 @@ ViewData["Title"] = "@Model.GeneralViewInfos.PageTitle";
                         <td>
                             @Html.DisplayFor(modelItem => item.LastName)
                         </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Photo)
+                        <td>                        
+                            <img src="@Url.Content(image)" alt="trainer" width="100" height="100" />
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Speciality_Id)
