--- a/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/Customers/Upsert.cshtml
+++ b/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/Customers/Upsert.cshtml
@@ -42,11 +42,24 @@ ViewData["Title"] = "@Model.GeneralViewInfos.PageTitle";
                 <label for="Email" asp-for="Customer.Email"></label>
                 <span asp-validation-for="Customer.Email" class="text-danger"></span>
             </div>
+
             <div class="form-floating mb-3">
-                <input asp-for="Customer.Photo" class="form-control" id="Photo" placeholder="@Html.DisplayNameFor(model => model.Customer.Photo)" />
-                <label for="Photo" asp-for="Customer.Photo"></label>
-                <span asp-validation-for="Customer.Photo" class="text-danger"></span>
+                <input asp-for="objective.Name" class="form-control" id="Objective" placeholder="@Html.DisplayNameFor(model => model.Customer.Objectives)" />
+                <label for="Objective" asp-for="Customer.Objectives"></label>
+                <span asp-validation-for="Customer.Objectives" class="text-danger"></span>
             </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Customer.MaxScheduledSession" class="form-control" id="MaxScheduledSession" placeholder="@Html.DisplayNameFor(model => model.Customer.MaxScheduledSession)" />
+                <label for="MaxScheduledSession" asp-for="Customer.MaxScheduledSession"></label>
+                <span asp-validation-for="Customer.MaxScheduledSession" class="text-danger"></span>
+            </div>
+
+
+            @*<div class="form-floating mb-3">
+            <input asp-for="Customer.Photo" class="form-control" id="Photo" placeholder="@Html.DisplayNameFor(model => model.Customer.Photo)" />
+            <label for="Photo" asp-for="Customer.Photo"></label>
+            <span asp-validation-for="Customer.Photo" class="text-danger"></span>
+        </div>*@
             <div class="form-floating mb-3">
                 <input asp-for="Customer.BirthDate" class="form-control" id="BirthDate" placeholder="@Html.DisplayNameFor(model => model.Customer.BirthDate)" />
                 <label for="BirthDate" asp-for="Customer.BirthDate"></label>
