--- a/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/_ViewImports.cshtml
+++ b/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/_ViewImports.cshtml
@@ -2,7 +2,8 @@
 @using JuliePro_Models
 @using JuliePro_Models.ViewModels;
 @using JuliePro_Utility
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers.Localization
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Locals
-@*@inject IHtmlLocalizer<Share dResource> SharedLocals*@
+@*@inject IHtmlLocalizer<SharedResource> SharedLocals*@
