--- a/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/Home/Index.cshtml
+++ b/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="text-center">
     <h1 class="display-4 text-danger">Welcome</h1>
-    <h4 class="text-warning">You will never have the butt you want if you sit on the butt you have.</h4>
+    <h4 class="text-warning">@Locals["home"]</h4>
 
     <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/imagesLayout/JulioProImage.png" style="width:50%" /></a>
     <br />
