--- a/TP3_Depart/JuliePro/JuliePro/Views/Shared/_Layout.cshtml
+++ b/TP3_Depart/JuliePro/JuliePro/Views/Shared/_Layout.cshtml
@@ -29,18 +29,22 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Trainer
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item">Tracking my Customers</a></li>
-                                <li><a class="dropdown-item">Tracking SheduledSessions</a></li>
-                                <li><a class="dropdown-item">Tracking objectives</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Trainers" asp-action="Index">Profile</a></li>
-                            </ul>
-                        </li>
+
+                        @if (User.IsInRole("Trainer") || User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Trainer
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item">Tracking my Customers</a></li>
+                                    <li><a class="dropdown-item">Tracking SheduledSessions</a></li>
+                                    <li><a class="dropdown-item">Tracking objectives</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Trainers" asp-action="Index">Profile</a></li>
+                                </ul>
+                            </li>
+                        }
 
 
                         <li class="nav-item dropdown">
@@ -55,20 +59,22 @@
                         </li>
 
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Management
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item">Training</a></li>
-                                <li><a class="dropdown-item">Equipment</a></li>
-                                <li><a class="dropdown-item">Speciality</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item">Manage Trainers</a></li>
-                            </ul>
-                        </li>
-
-                    </ul>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Management
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item">Training</a></li>
+                                    <li><a class="dropdown-item">Equipment</a></li>
+                                    <li><a class="dropdown-item">Speciality</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item">Manage Trainers</a></li>
+                                </ul>
+                            </li>
+                        }
+                        </ul>
                 </div>
 
                 <div class="col-md-2 text-right">
